--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,18 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
+rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
+
+find_package(Eigen REQUIRED)
+include_directories(${Eigen_INCLUDE_DIRS})
+
+#INCLUDE(cmake/python.cmake)
+#FINDPYTHON ()
+
+INSTALL(FILES
+  ${CMAKE_CURRENT_SOURCE_DIR}/scripts/cycling.py
+  DESTINATION ${PYTHON_SITELIB}/dynamic_graph/sot/application
+  )
