temporary commit. does not work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,20 +20,43 @@ include(cmake/python.cmake)
 SETUP_PROJECT()
 SEARCH_FOR_EIGEN()
 
+ADD_REQUIRED_DEPENDENCY("sot-application")
+
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+add_service_files(
+   FILES
+   Input_from_user.srv
+ )
+
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 INSTALL(FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/scripts/cycling.py
   DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/python2.7/site-packages/dynamic_graph/sot/application #Put your own path to the installation directory
   )
 
-INSTALL(DIRECTORY launch rviz_cfg 
-  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME} #Put your own path to the installation directory
+INSTALL(FILES
+  ${CMAKE_CURRENT_SOURCE_DIR}/scripts/__init__.py
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/python2.7/site-packages/dynamic_graph/sot/application #Put your own path to the installation directory
   )
 
 
+INSTALL(DIRECTORY launch rviz_cfg scripts
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME} #Put your own path to the installation directory
+  )
+
+install(FILES package.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}/)
+
+install(FILES scripts/launcher 
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/ 
+  PERMISSIONS OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+  )
 SETUP_PROJECT_FINALIZE()
+
